Fix: change h2 letter spacing to -0.025rem

--- a/styles/style.css
+++ b/styles/style.css
@@ -72,7 +72,7 @@ h2 {
   font-size: 2.75rem;
   margin-bottom: 2rem;
   font-weight: 500;
-  letter-spacing: -0.05rem;
+  letter-spacing: -0.025rem;
 }
 
 .projects__subtitle {
